--- a/index.html
+++ b/index.html
@@ -451,47 +451,57 @@
 
     <footer>
       <section id="footer">
-        <h3>About</h3>
-        <p>
-          I’m passionate about crafting intuitive, engaging user experiences and
-          building robust, user-centric applications. With a strong focus on
-          design and development, I bring creative ideas to life with both
-          technical expertise and aesthetic vision. Let's connect and
-          collaborate on your next project!
-        </p>
+        <div class="main-container">
+          <div class="container-1">
+            <h3>About</h3>
+            <p>
+              I’m passionate about crafting intuitive, engaging user experiences
+              and building robust, user-centric applications. With a strong
+              focus on design and development, I bring creative ideas to life
+              with both technical expertise and aesthetic vision. Let's connect
+              and collaborate on your next project!
+            </p>
 
-        <nav>
-          <a
-            href="https://www.linkedin.com/in/tharindu-shehan-734366346/"
-            target="_blank"
-            ><i
-              style="width: 40px; height: 20px"
-              class="fa-brands fa-linkedin"
-            ></i
-          ></a>
-          <a href="https://github.com/ERTShehan" target="_blank"
-            ><i
-              style="width: 40px; height: 20px"
-              class="fa-brands fa-github"
-            ></i
-          ></a>
-        </nav>
+            <nav>
+              <a
+                href="https://www.linkedin.com/in/tharindu-shehan-734366346/"
+                target="_blank"
+                ><i
+                  style="width: 40px; height: 20px"
+                  class="fa-brands fa-linkedin"
+                ></i
+              ></a>
+              <a href="https://github.com/ERTShehan" target="_blank"
+                ><i
+                  style="width: 40px; height: 20px"
+                  class="fa-brands fa-github"
+                ></i
+              ></a>
+            </nav>
+          </div>
 
-        <h3>Have a Questions</h3>
-        <p>
-          <img src="/assets/images/location-Icon.png" alt="location" />
-          Akuressa, Matara, Sri Lanka
-        </p>
-        <p>
-          <img src="/assets/images/call-Icon.png" alt="Call" />+94 788720585
-        </p>
-        <p>
-          <img src="/assets/images/email-Icon.png" alt="" />ertsshehan@gmail.com
-        </p>
-        <br />
-        <p align="center">
-          Copyright &copy;2025 All rights reserved. | Tharindu Shehan
-        </p>
+          <div class="container-2">
+            <h3>Have a Questions</h3>
+            <div>
+              <p>
+                <img src="/assets/images/location-Icon.png" alt="location" />
+                Akuressa, Matara, <span>Sri Lanka</span>
+              </p>
+              <p>
+                <img src="/assets/images/call-Icon.png" alt="Call" />+94
+                788720585
+              </p>
+              <p>
+                <img
+                  src="/assets/images/email-Icon.png"
+                  alt=""
+                />ertsshehan@gmail.com
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <p>Copyright &copy;2025 All rights reserved. | Tharindu Shehan</p>
       </section>
     </footer>
   </body>
