--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
       name="keywords"
       content="HTML, CSS, html, JavaScript, JS, ShehaN, portfolio, web developer, software developer, TShehan, Tharindu, Shehan, Tharindu Shehan, ShehaN.com, shehan.com"
     />
+    <!-- <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    /> -->
     <link
       href="https://fonts.cdnfonts.com/css/jsmath-cmmi10"
       rel="stylesheet"
@@ -53,6 +59,38 @@
     />
   </head>
   <body>
+    <!-- <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav> -->
     <header class="header">
       <div id="name">
         <h2 style="font-family: jsmath-cmmi10; margin: 0">ShehaN</h2>
@@ -93,101 +131,97 @@
           />
         </div>
 
-        <div class="background-photo"></div>
-        <p>
-          I’m Tharindu Shehan, a passionate developer, coder, and UI/UX
-          designer. With a strong focus on creating seamless and engaging user
-          experiences, I specialize in crafting intuitive designs and building
-          robust applications. Explore my work to see how I combine creativity
-          with technical expertise to bring innovative ideas to life. Let's
-          connect and collaborate on your next project!
-        </p>
+        <div class="background-photo">
+          <p>
+            I’m Tharindu Shehan, a passionate developer, coder, and UI/UX
+            designer. With a strong focus on creating seamless and engaging user
+            experiences, I specialize in crafting intuitive designs and building
+            robust applications. Explore my work to see how I combine creativity
+            with technical expertise to bring innovative ideas to life. Let's
+            connect and collaborate on your next project!
+          </p>
 
-        <p>You can find me on below platforms :</p>
-        <br />
-        <nav id="find-me">
-          <a
-            href="https://www.linkedin.com/in/tharindu-shehan-734366346/"
-            target="_blank"
-            ><i
-              style="width: 40px; height: 20px"
-              class="fa-brands fa-linkedin"
-            ></i
-          ></a>
-          <a href="https://github.com/ERTShehan" target="_blank"
-            ><i
-              style="width: 40px; height: 20px"
-              class="fa-brands fa-github"
-            ></i
-          ></a>
-        </nav>
+          <p>You can find me on below platforms :</p>
+          <br />
+          <nav id="find-me">
+            <a
+              href="https://www.linkedin.com/in/tharindu-shehan-734366346/"
+              target="_blank"
+              ><i
+                style="width: 40px; height: 20px"
+                class="fa-brands fa-linkedin"
+              ></i
+            ></a>
+            <a href="https://github.com/ERTShehan" target="_blank"
+              ><i
+                style="width: 40px; height: 20px"
+                class="fa-brands fa-github"
+              ></i
+            ></a>
+          </nav>
+        </div>
       </section>
 
       <section id="section2">
         <div>
-          <p><span id="number">20</span> <br />Awards</p>
+          <p><span id="number">10</span> <br />Awards</p>
           <p><span id="number">02</span> <br />Complete Projects</p>
           <p><span id="number">02</span> <br />Happy Customers</p>
         </div>
       </section>
 
       <section id="about">
-        <!-- <div class="line-contner">
-          <div class="line line-1">
-            <div class="ln"></div>
-            <div class="crcl"></div>
-          </div>
-        </div> -->
         <header id="about-header">
           <div class="about-main-text">
             <span id="about-color">About</span> me
           </div>
           <div class="about-behind-text">About</div>
         </header>
-        <div class="about-paragraph">
-          <p id="about-paragraph1">
-            I am an undergraduate student pursuing a degree in Software
-            Engineering. I have a strong foundation in programming with
-            proficiency in Java and MySQL database management. Additionally, I
-            am skilled in web development technologies such as HTML, CSS, and
-            JavaScript, enabling me to build dynamic and responsive websites.
-          </p>
+        <div class="about-content">
+          <div class="about-paragraph">
+            <p id="about-paragraph1">
+              I am an undergraduate student pursuing a degree in Software
+              Engineering. I have a strong foundation in programming with
+              proficiency in Java and MySQL database management. Additionally, I
+              am skilled in web development technologies such as HTML, CSS, and
+              JavaScript, enabling me to build dynamic and responsive websites.
+            </p>
 
-          <p id="about-paragraph2">
-            I am also experienced with various software tools, including the
-            Microsoft Office suite, Photoshop for graphic design, Figma for
-            UI/UX design, and Audacity for audio editing. With a diverse skill
-            set across both development and creative tools, I am passionate
-            about learning and improving my abilities in the field of software
-            engineering.
-          </p>
-        </div>
+            <p id="about-paragraph2">
+              I am also experienced with various software tools, including the
+              Microsoft Office suite, Photoshop for graphic design, Figma for
+              UI/UX design, and Audacity for audio editing. With a diverse skill
+              set across both development and creative tools, I am passionate
+              about learning and improving my abilities in the field of software
+              engineering.
+            </p>
+          </div>
 
-        <div class="point-details">
-          <ul>
-            <div class="details-container">
-              <div class="detail-item">
-                <span class="label">Name:</span>
-                <span class="value">Tharindu Shehan</span>
+          <div class="point-details">
+            <ul>
+              <div class="details-container">
+                <div class="detail-item">
+                  <span class="label">Name:</span>
+                  <span class="value">Tharindu Shehan</span>
+                </div>
+                <div class="detail-item">
+                  <span class="label">Date of birth:</span>
+                  <span class="value">December 19, 2002</span>
+                </div>
+                <div class="detail-item">
+                  <span class="label">Address:</span>
+                  <span class="value">Akuressa, Matara</span>
+                </div>
+                <div class="detail-item">
+                  <span class="label">Email:</span>
+                  <span class="value">ertsshehan@gmail.com</span>
+                </div>
+                <div class="detail-item">
+                  <span class="label">Phone:</span>
+                  <span class="value">+94 788720585</span>
+                </div>
               </div>
-              <div class="detail-item">
-                <span class="label">Date of birth:</span>
-                <span class="value">December 19, 2002</span>
-              </div>
-              <div class="detail-item">
-                <span class="label">Address:</span>
-                <span class="value">Akuressa, Matara</span>
-              </div>
-              <div class="detail-item">
-                <span class="label">Email:</span>
-                <span class="value">ertsshehan@gmail.com</span>
-              </div>
-              <div class="detail-item">
-                <span class="label">Phone:</span>
-                <span class="value">+94 788720585</span>
-              </div>
-            </div>
-            <!-- <div class="text"><b>Name:</b> Tharindu Shehan</div>
+              <!-- <div class="text"><b>Name:</b> Tharindu Shehan</div>
             <div class="dot"></div>
             <div class="line"></div>
             <div class="text"><b>Date of birth: </b>December 19, 2002</div>
@@ -200,12 +234,13 @@
             <div class="dot"></div>
             <div class="line"></div>
             <div class="text"><b>Phone: </b>+94 788720585</div> -->
-            <!-- <li><b>Name:</b> Tharindu Shehan</li>
+              <!-- <li><b>Name:</b> Tharindu Shehan</li>
             <li><b>Date of birth: </b>December 19, 2002</li>
             <li><b>Address: </b>Akuressa, Matara</li>
             <li><b>Email: </b>ertsshehan@gmail.com</li>
             <li><b>Phone: </b>+94 788720585</li> -->
-          </ul>
+            </ul>
+          </div>
         </div>
 
         <br /><br />
@@ -308,22 +343,44 @@
           </div>
           <div class="skills-behind-text">Skills</div>
         </header>
-        <div>
-          <p>Java 90 %</p>
-          <p>JavaScript 50 %</p>
-          <p>MySQL 95 %</p>
-          <p>HTML 60 %</p>
-          <p>Microsoft Office 95 %</p>
-          <p>CSS 70 %</p>
-          <hr />
+        <section class="skills-container">
+          <div class="skill">
+            <label for="java">Java <span>75%</span></label>
+            <div class="progress-bar" id="java"></div>
+          </div>
+          <div class="skill">
+            <label for="javascript">JavaScript <span>60%</span></label>
+            <div class="progress-bar" id="javascript"></div>
+          </div>
+          <div class="skill">
+            <label for="mysql">MySQL <span>80%</span></label>
+            <div class="progress-bar" id="mysql"></div>
+          </div>
+          <div class="skill">
+            <label for="html">HTML <span>60%</span></label>
+            <div class="progress-bar" id="html"></div>
+          </div>
+          <div class="skill">
+            <label for="microsoft-office"
+              >Microsoft Office <span>95%</span></label
+            >
+            <div class="progress-bar" id="microsoft-office"></div>
+          </div>
+          <div class="skill">
+            <label for="css">CSS <span>70%</span></label>
+            <div class="progress-bar" id="css"></div>
+          </div>
+        </section>
+
+        <div class="image-container">
+          <img src="/assets/images/javaIcon.png" alt="Java" />
+          <img src="/assets/images/MySQL Icon.png" alt="MySQL" />
+          <img src="/assets/images/HTML Icon.png" alt="HTML" />
+          <img src="/assets/images/CSS Icon.png" alt="CSS" />
+          <img src="/assets/images/Figma Icon.png" alt="Figma" />
+          <img src="/assets/images/Nodejs Icon.png" alt="Node.js" />
+          <img src="/assets/images/JavaScript Icon.png" alt="JavaScript" />
         </div>
-        <img src="/assets/images/javaIcon.png" alt="Java" />
-        <img src="/assets/images/MySQL Icon.png" alt="MySQL" />
-        <img src="/assets/images/HTML Icon.png" alt="HTML" />
-        <img src="/assets/images/CSS Icon.png" alt="CSS" />
-        <img src="/assets/images/Figma Icon.png" alt="Figma" />
-        <img src="/assets/images/Nodejs Icon.png" alt="nodejs" />
-        <img src="/assets/images/JavaScript Icon.png" alt="JavaScript" />
       </section>
 
       <section id="project">
@@ -392,58 +449,65 @@
           <div class="contact-behind-text">Contact</div>
         </header>
 
-        <span style="text-align: center"
-          ><p>Contact if you have any questions</p></span
-        >
+        <span style="text-align: center">
+          <p>Contact if you have any questions</p>
+        </span>
 
-        <div>
-          <div>
-            <img src="/assets/images/AddressIcon.png" alt="Address" />
-            <br />
+        <div class="contact-container">
+          <div class="contact-box">
+            <div class="icon-container">
+              <img src="/assets/images/AddressIcon.png" alt="Address" />
+            </div>
             <b>ADDRESS</b> <br />
             Akuressa, Matara, Sri Lanka
           </div>
 
-          <div>
-            <img src="/assets/images/Contact Icon.png" alt="Contact" />
-            <br />
+          <div class="contact-box">
+            <div class="icon-container">
+              <img src="/assets/images/Contact Icon.png" alt="Contact" />
+            </div>
             <b>CONTACT NUMBER</b> <br />
             +94 788720585
           </div>
 
-          <div>
-            <img src="/assets/images/Email Icon.png" alt="Email" />
-            <br />
+          <div class="contact-box">
+            <div class="icon-container">
+              <img src="/assets/images/Email Icon.png" alt="Email" />
+            </div>
             <b>EMAIL</b> <br />
             ertsshehan@gmail.com
           </div>
 
-          <div>
-            <img src="/assets/images/Website Icon.png" alt="Website" />
-            <br />
+          <div class="contact-box">
+            <div class="icon-container">
+              <img src="/assets/images/Website Icon.png" alt="Website" />
+            </div>
             <b>WEBSITE</b> <br />
           </div>
         </div>
+
         <br /><br />
 
-        <div>
-          <div>
+        <div class="contact-form-container">
+          <div class="contact-image">
             <img src="/assets/images/contactme.png" alt="Contact me" />
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           </div>
-          <div><input type="text" placeholder="Your Name" /></div>
-          <div><input type="text" placeholder="Your Email" /></div>
-          <div><input type="text" placeholder="Subject" /></div>
-          <div>
-            <textarea
-              name="message"
-              id="message"
-              placeholder="Message"
-              rows="5"
-              cols="50"
-            ></textarea>
+          <div class="contact-form">
+            <div><input type="text" placeholder="Your Name" /></div>
+            <div><input type="text" placeholder="Your Email" /></div>
+            <div><input type="text" placeholder="Subject" /></div>
+            <div>
+              <textarea
+                name="message"
+                id="message"
+                placeholder="Message"
+                rows="5"
+                cols="50"
+              ></textarea>
+            </div>
+            <div><button type="button">SEND MESSAGE</button></div>
           </div>
-          <div><button type="button">SEND MESSAGE</button></div>
         </div>
         <hr />
       </section>
@@ -501,8 +565,16 @@
           </div>
         </div>
 
-        <p>Copyright &copy;2025 All rights reserved. | Tharindu Shehan</p>
+        <p id="copyright">
+          Copyright &copy;2025 All rights reserved. | Tharindu Shehan
+        </p>
       </section>
     </footer>
+
+    <!-- <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script> -->
   </body>
 </html>
